<resources>
    <string name="com.crashlytics.RequireBuildId">false</string>
    <string name="splash_description">SnapTools is a project aimed to provide Snapchat modifications using the Xposed Framework. We provide new functionality and features to the popular Snapchat application, in a seamless and modular way.
        \n\nWe use a cloud based download system to allow for straightforward updates as well as support for hotswapping of supported Snapchat versions without the need of a system reboot.</string>
    <string name="splash_authors">Andre (Dev) | Ethan (Dev) | Pedro (Team) | Gabe (Team)\nNightMean (Team)</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="btn_disable">Disable</string>
    <string name="btn_enable">Enable</string>
    <string name="ToS">By pressing YES, you agree to our Terms of Service and our Privacy Policy, both of which can be viewed under the Legal page in the SnapTools app.</string>
    <string name="permission_request_msg">This application requires External Storage Read/Write access. Without these permissions the application will terminate</string>
    <string name="permission_request_title">Permissions Request</string>
    <string name="module_inactive">Module Inactive: Activate module and reboot</string>
    <string name="banner_apk_update">App Update Available</string>
    <string name="banner_pack_update">Pack Update Available</string>
    <string name="master_switch_disabled">Master Switch Is Off: All functions are disabled</string>
    <string name="master_switch_text">Toggle all functions without reboot</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="copyright">Terms of Service</string>
    <string name="legal_snaptools">SnapTools is in no way affiliated with, authorized, maintained, sponsored or endorsed by Snap Inc, Snapchat, or any of its child subsidiaries. This is an independent application, which utilizes none of the copyrighted works of Snap Inc. Any use of the word \"Snap\" does not constitute a relationship between Snap Inc and SnapTools, and is simply in accordance with describing our app\'s function.</string>
    <string name="snaptools_copyright">For the purposes of this license agreement, the word AUTHORS will refer to any authorized contributors to the SnapTools codebase hosted on Github.\n\nCopyrights of SnapTools exclusively belongs to Andre Marques\n\nSnapTools is distributed for free, no purchase or payment in any form is necessary to acquire and use SnapTools\n\nSnapTools is provided AS IS, without any kind of warranty or guarantee of function or prevention of the loss of data or incurring of damage on any device you choose to use SnapTools on\n\nYou may not redistribute, rehost, repurpose, share alone or as a part of any package or collection for commercial or noncommercial purposes, the code or files contained in this application, nor the application itself\n\nYou may not reverse-engineer, modify, or in any way change SnapTools\n\nAndre Marques reserves the right to change this license agreement at any time, with or without prior notification\n\nThe only person or persons authorized to be exempt from the clauses stated above are the AUTHORS of this application, as described above, as necessary for working on this application\n\nAndre Marques and any AUTHORS reserve the right to terminate your account at any time, for any reason whatsoever, without informing you. Access to SnapTools is provided by Andre Marques and the AUTHORS, and ownership still resides with them.\n\nAll rights not described in this license agreement, such as those belonging to libraries used in this application, belong to their respective owners\n\nCopyright © 2017 Andre Marques</string>
    <string name="libs">Libraries</string>
    <string name="xposed">Xposed Framework</string>
    <string name="xposed_license">Copyright © 2014 rovo89, Tungstwenty\n\nLicensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License</string>
    <string name="timber">Timber</string>
    <string name="timber_license">Copyright © 2013 Jake Wharton\n\nLicensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="wang">"AVLoadingIndicatorView</string>
    <string name="wang_license">Copyright © 2013 Jack Wang\n\nLicensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="scv">SimpleCropView</string>
    <string name="scv_license">Copyright © 2015 Issei Aoki\n\nLicensed under the MIT License (MIT).\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="brvah">BaseRecyclerViewAdapterHandler</string>
    <string name="brvah_license">Copyright © 2016 陈宇明\n\nLicensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="bumptech">Glide</string>
    <string name="bumptech_license">Glide utilizes multiple licenses for the project.\n\nPlease see\nhttps://github.com/bumptech/glide/blob/master/LICENSE\nfor details.</string>
    <string name="nonsense">FilePicker</string>
    <string name="nonsense_license">FilePicker is licensed under the Mozilla Public License 2.0.\n\nPlease see\nhttps://github.com/spacecowboy/NoNonsense-FilePicker/blob/master/LICENSE\n for details.</string>
    <string name="butterknife">Butter Knife</string>
    <string name="butterknife_license">Copyright © 2013 Jake Wharton\n\nLicensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="reactivex">RxJava</string>
    <string name="reactivex_license">Copyright © 2016-Present RxJava Contributors\n\nLicensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="konfetti">Konfetti</string>
    <string name="konfetti_license">Copyright © 2017 Dion Segijn\nLicensed under the ISC License.\n\nPermission to use, copy, modify, and/or distribute this software for any purpose with or without fee is hereby granted, provided that the above copyright notice and this permission notice appear in all copies.\n\nTHE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.</string>
    <string name="appupdater">App Updater</string>
    <string name="appupdater_licence">Copyright © 2016 Javier Santos\n\nLicensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="silicompress">SiliCompressor</string>
    <string name="silicompress_license">Copyright © 2016 IceTeck\n\nLicensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="tos">Terms of Service</string>
</resources>