<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    tools:context="com.ljmu.andre.snaptools.MainActivity">
    <!--android:windowSoftInputMode="stateHidden"-->
    <!--Potentially add above to LinearLayout, and uncommand pair in frag_shop.xml-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/AppToolbar"
        app:title="@string/app_name">

        <ImageButton
            android:id="@+id/btn_tutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?android:attr/selectableItemBackground"
            android:scaleX="0.6"
            android:scaleY="0.6"
            app:srcCompat="@drawable/help_filled_96"/>

    </android.support.v7.widget.Toolbar>


    <TextView
        android:id="@+id/txt_mod_inactive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/error"
        android:gravity="center"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:text="@string/module_inactive"
        android:textColor="@color/backgroundPrimary"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txt_banner_apk_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/success"
        android:gravity="center"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:text="@string/banner_apk_update"
        android:textColor="@color/backgroundPrimary"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txt_banner_pack_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/success"
        android:gravity="center"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:text="@string/banner_pack_update"
        android:textColor="@color/backgroundPrimary"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txt_master_switch_disabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/error"
        android:gravity="center"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:text="@string/master_switch_disabled"
        android:textColor="@color/backgroundPrimary"
        android:visibility="gone"/>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/drawer_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false">

            <RelativeLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false"
                android:clipToPadding="false">

            </RelativeLayout>

            <nl.dionsegijn.konfetti.KonfettiView
                android:id="@+id/konfetti"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </RelativeLayout>

        <com.ljmu.andre.snaptools.UIComponents.CustomNavigation
            android:id="@+id/drawer_navigation_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:theme="@style/NavigationDrawer"
            app:menu="@menu/menu"/>
    </android.support.v4.widget.DrawerLayout>

</LinearLayout>
